Fix mobile styling - wrap the 3 columns

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -293,4 +293,5 @@ h1, h2, h3, h4, h5 {
 section {
   float: none;
   padding-bottom: 0px;
+  flex-wrap: wrap;
 }
